Fix Viewport Units on Mobile

--- a/css/base.css
+++ b/css/base.css
@@ -202,12 +202,12 @@ img {
 /**************** Layout ****************/
 
 html {
-    height: calc(100vh - (2*var(--spacing)));
+    height: calc((var(--vh, 1vh) * 100) - (2*var(--spacing)));
     padding: var(--spacing);
 }
 
 body {
-    height: calc(100vh - (2*var(--spacing)));
+    height: calc((var(--vh, 1vh) * 100) - (2*var(--spacing)));
     margin: 0;
     padding: 0;
     font-family: Montserrat;
